# garcon

./: .clang-format  .cppcheck-false-positives  .gcc-analyzer-false-positives  .gitignore  .scan-build-false-positives  AUTHORS  COPYING  ChangeLog  HACKING  Makefile.am  NEWS  NEWS.libxfce4menu  README  README.md  STATUS  TODO  autogen.sh  configure.ac  configure.ac.in  configure.in.in  meson.build  meson_options.txt  module.xml
data/: Makefile.am
data/xfce/: Makefile.am  meson.build  xfce-accessories.desktop.in  xfce-accessories.directory.in  xfce-applications.menu  xfce-development.desktop.in  xfce-development.directory.in  xfce-education.desktop.in  xfce-education.directory.in  xfce-games.desktop.in  xfce-games.directory.in  xfce-graphics.directory.in  xfce-hardware.desktop.in  xfce-hardware.directory.in  xfce-health.desktop.in  xfce-multimedia.desktop.in  xfce-multimedia.directory.in  xfce-network.desktop.in  xfce-network.directory.in  xfce-office.directory.in  xfce-other.directory.in  xfce-personal.directory.in  xfce-science.desktop.in  xfce-science.directory.in  xfce-screensavers.directory.in  xfce-settings.desktop.in  xfce-settings.directory.in  xfce-system.desktop.in  xfce-system.directory.in
docs/: Makefile.am
docs/reference/: Makefile.am  garcon-docs.xml  garcon-docs.xml.in  garcon-sections.txt  garcon.types  gdesktopmenu-sections.txt  gdesktopmenu.types  libxfce4menu-docs.sgml  libxfce4menu-sections.txt  libxfce4menu.types  meson.build
docs/reference/tmpl/: config.sgml  libxfce4menu-config.sgml  libxfce4menu-unused.sgml  libxfce4menu.sgml  spinlock.sgml  tdb.sgml  tdbconfig.sgml  xfce-menu-and-rules.sgml  xfce-menu-directory.sgml  xfce-menu-element.sgml  xfce-menu-environment.sgml  xfce-menu-gio.sgml  xfce-menu-init-shutdown.sgml  xfce-menu-item-cache.sgml  xfce-menu-item-pool.sgml  xfce-menu-item.sgml  xfce-menu-layout.sgml  xfce-menu-merger.sgml  xfce-menu-monitor.sgml  xfce-menu-move.sgml  xfce-menu-node.sgml  xfce-menu-not-rules.sgml  xfce-menu-or-rules.sgml  xfce-menu-parser.sgml  xfce-menu-rules.sgml  xfce-menu-separator.sgml  xfce-menu-standard-rules.sgml  xfce-menu-tree-provider.sgml  xfce-menu.sgml
garcon/: .clang-format  Makefile.am  garcon-1.pc.in  garcon-config.c  garcon-config.h  garcon-config.h.in  garcon-environment.c  garcon-environment.h  garcon-gio.c  garcon-marshal.list  garcon-menu-directory.c  garcon-menu-directory.h  garcon-menu-element.c  garcon-menu-element.h  garcon-menu-item-action.c  garcon-menu-item-action.h  garcon-menu-item-cache.c  garcon-menu-item-cache.h  garcon-menu-item-pool.c  garcon-menu-item-pool.h  garcon-menu-item.c  garcon-menu-item.h  garcon-menu-merger.c  garcon-menu-merger.h  garcon-menu-monitor.c  garcon-menu-monitor.h  garcon-menu-node.c  garcon-menu-node.h  garcon-menu-parser.c  garcon-menu-parser.h  garcon-menu-separator.c  garcon-menu-separator.h  garcon-menu-tree-provider.c  garcon-menu-tree-provider.h  garcon-menu.c  garcon-menu.h  garcon-private.c  garcon-private.h  garcon.c  garcon.h  (+21 more)
garcon-gtk/: .clang-format  Makefile.am  garcon-gtk-menu.c  garcon-gtk-menu.h  garcon-gtk.h  garcon-gtk.symbols  garcon-gtk2-1.pc.in  garcon-gtk3-1.pc.in  meson.build
gdesktopmenu/: Makefile.am  gdesktopmenu-1.pc.in  gdesktopmenu-config.h.in  gdesktopmenu.c  gdesktopmenu.h  gdesktopmenudirectory.c  gdesktopmenudirectory.h  gdesktopmenuelement.c  gdesktopmenuelement.h  gdesktopmenuenvironment.c  gdesktopmenuenvironment.h  gdesktopmenugio.c  gdesktopmenugio.h  gdesktopmenuitem.c  gdesktopmenuitem.h  gdesktopmenuitemcache.c  gdesktopmenuitemcache.h  gdesktopmenuitempool.c  gdesktopmenuitempool.h  gdesktopmenumain.c  gdesktopmenumain.h  gdesktopmenumerger.c  gdesktopmenumerger.h  gdesktopmenumonitor.c  gdesktopmenumonitor.h  gdesktopmenunode.c  gdesktopmenunode.h  gdesktopmenuparser.c  gdesktopmenuparser.h  gdesktopmenuseparator.c  gdesktopmenuseparator.h  gdesktopmenutreeprovider.c  gdesktopmenutreeprovider.h
icons/: Makefile.am  meson.build
icons/32x32/: Makefile.am
icons/64x64/: Makefile.am
libxfce4menu/: Makefile.am  libxfce4menu-0.1.pc.in  libxfce4menu-config.h  libxfce4menu-config.h.in  libxfce4menu.c  libxfce4menu.h  xfce-menu-and-rules.c  xfce-menu-and-rules.h  xfce-menu-directory.c  xfce-menu-directory.h  xfce-menu-element.c  xfce-menu-element.h  xfce-menu-environment.c  xfce-menu-environment.h  xfce-menu-gio.c  xfce-menu-gio.h  xfce-menu-item-cache.c  xfce-menu-item-cache.h  xfce-menu-item-pool.c  xfce-menu-item-pool.h  xfce-menu-item.c  xfce-menu-item.h  xfce-menu-layout.c  xfce-menu-layout.h  xfce-menu-merger.c  xfce-menu-merger.h  xfce-menu-monitor.c  xfce-menu-monitor.h  xfce-menu-move.c  xfce-menu-move.h  xfce-menu-node.c  xfce-menu-node.h  xfce-menu-not-rules.c  xfce-menu-not-rules.h  xfce-menu-or-rules.c  xfce-menu-or-rules.h  xfce-menu-parser.c  xfce-menu-parser.h  xfce-menu-rules.c  xfce-menu-rules.h  (+8 more)
po/: ChangeLog  LINGUAS  POTFILES.in  POTFILES.skip  am.po  ar.po  ast.po  be.po  bg.po  bn.po  ca.po  cs.po  cy.po  da.po  de.po  el.po  en_AU.po  en_GB.po  eo.po  es.po  et.po  eu.po  fi.po  fr.po  garcon.pot  gl.po  he.po  hi.po  hr.po  hu.po  hy.po  hy_AM.po  hye.po  id.po  ie.po  is.po  it.po  ja.po  ka.po  kab.po  (+38 more)
tdb/: Makefile.am  tdbconfig.h.in
tests/: Makefile.am  gdb-test-display-menu  meson.build  run-test-display-menu.sh  test-display-menu.c  test-menu-parser.c  test-menu-spec.c
